updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am studying to be a software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was born and raised in San Benito, TX, but have lived in Dallas, TX for over 25 years now.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy working out, running, fishing, camping, hiking, and codinng.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job would be to have the freedom and flexibility to create and build something. I am creatively inclined, entrepreneurial spirited, and like to solve problems.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Dallas, TX</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I have worked with computers for over 20 years. I've built website, and learned html and css over the years. Since technology, AI, and automation are the wave of the future I felt there was no better time than now to learn web development.</p>
     </section>
 
     <footer id="footer">
